--- a/main.html
+++ b/main.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<article>
+    <p>First paragraph.</p>
+    <p>This is the second paragraph.</p>
+    <p>This is the third paragraph.</p>
+  </article>
+
+  <ul>
+    <li>Item One</li>
+    <li>Item Two</li>
+    <li>Item Three</li>
+    <li>Item Four</li>
+    <li>Item Five</li>
+  </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
